--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <!-- Updated by CI/CD Pipeline -->
     <h1>Hi, I'm Yamini Yamala!</h1>
     <p>This is my first live project hosted on AWS S3</p>
     <p>More projects and updates coming soon...</p>
